# minimal-bazel-hashable

./: .bazelrc  BUILD.bazel  Example.hs  WORKSPACE  bazel-hashable.cabal
